<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="forgetPasswordVarModel"
            type="com.example.yshop.feature.forgetpasswordfragment.domain.viewmodel.ForgetPasswordViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".forgetpasswordfragment.ForgetPasswordFragment"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <FrameLayout
                android:id="@+id/f1_header_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/auth_header_image_height"
                android:background="@drawable/app_gradinet_color_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_description"
                    android:scaleType="fitXY"/>

                <ImageView
                    android:layout_width="@dimen/auth_logo_width_size"
                    android:layout_height="@dimen/auth_logo_height_size"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:scaleType="center"
                    android:src="@drawable/y_shop_logo" />

                <com.example.yshop.core.utils.MSPTextViewRegular
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/lbl_text_view_textSize"
                    android:text="@string/app_name"
                    android:layout_gravity="center"
                    android:layout_marginTop="65dp" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_forget_password_fragmentId"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="top"/>

            </FrameLayout>
            <com.example.yshop.core.utils.MSPTextViewBold
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="232dp"
                android:text="@string/title_forget_password"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/title_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/f1_header_image"/>

            <com.example.yshop.core.utils.MSPTextViewRegular
                android:id="@+id/tv_title_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:gravity="center"
                android:text="@string/forget_password_title_description"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/forget_password_title_description_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"/>


            <!-- input text email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_emailId"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_email_id"
                android:textColorHint="@color/colorSecondaryText"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_description">

                <com.example.yshop.core.utils.MSPEditText
                    android:id="@+id/et_emailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={forgetPasswordVarModel.etEmail}"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.example.yshop.core.utils.MSPButton
                android:id="@+id/btn_submitId"
                android:layout_width="@dimen/button_width_size"
                android:layout_height="@dimen/button_height_size"
                android:layout_marginTop="52dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_lbl_submit"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/btn_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_emailId" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>