<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="settingsVarModel"
            type="com.example.yshop.feature.settingsfragment.domain.viewmodel.SettingsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".settingsfragment.SettingsFragment"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <FrameLayout
                android:id="@+id/fl_header_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_image_height"
                android:background="@drawable/app_gradinet_color_background">

                <ImageView
                    android:id="@+id/iv_header_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_description"
                    android:scaleType="fitXY" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_settings_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingStart="@dimen/toolbar_title_paddingStart"
                        android:paddingEnd="0dp"
                        android:text="@string/title_settings"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/toolbar_title_text_size"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.Toolbar>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_user_image"
                android:layout_width="@dimen/settings_user_image_size"
                android:layout_height="@dimen/settings_user_image_size"
                android:layout_below="@+id/fl_header_bg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/settings_user_image_marginTop">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_user_photoId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:elevation="5dp"
                    android:padding="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_user_profile"
                    app:civ_border_color="@color/colorThemeBlue"
                    app:civ_border_width="3dp"/>

            </FrameLayout>

            <com.example.yshop.core.utils.MSPTextViewRegular
                android:id="@+id/tv_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fl_header_bg"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:background="@drawable/item_grey_border_background"
                android:foreground="?attr/selectableItemBackground"
                android:paddingStart="@dimen/settings_edit_label_marginStartEnd"
                android:paddingTop="@dimen/settings_edit_label_marginTopBottom"
                android:paddingEnd="@dimen/settings_edit_label_marginStartEnd"
                android:paddingBottom="@dimen/settings_edit_label_marginTopBottom"
                android:text="@string/lbl_edit"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/settings_edit_label_textSize"/>

            <com.example.yshop.core.utils.MSPTextViewBold
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fl_user_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/settings_name_marginTop"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/settings_name_textSize"
                tools:text="Mohmed Keshwy" />

            <com.example.yshop.core.utils.MSPTextViewRegular
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/settings_info_marginTop"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/settings_info_textSize"
                tools:text="Male"/>

            <com.example.yshop.core.utils.MSPTextViewRegular
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_gender"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/settings_info_marginTop"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/settings_info_textSize"
                tools:text="mokeshawy@gmail.com" />

            <com.example.yshop.core.utils.MSPTextViewRegular
                android:id="@+id/tv_mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/settings_info_marginTop"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/settings_info_textSize"
                tools:text="00201007169654" />

            <LinearLayout
                android:id="@+id/ll_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_mobile_number"
                android:layout_margin="@dimen/settings_address_margin"
                android:background="@drawable/item_grey_border_background"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="@dimen/settings_address_padding">

                <com.example.yshop.core.utils.MSPTextViewRegular
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/settings_lbl_addresses_margin"
                    android:layout_weight="1"
                    android:text="@string/lbl_addresses"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/settings_lbl_addresses_textSize" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_vector_chevron_right" />

            </LinearLayout>

            <com.example.yshop.core.utils.MSPButton
                android:id="@+id/btn_logout"
                android:layout_width="@dimen/button_width_size"
                android:layout_height="@dimen/button_height_size"
                android:layout_below="@id/ll_address"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/settings_button_marginStartEnd"
                android:layout_marginTop="@dimen/settings_button_marginTopBottom"
                android:layout_marginEnd="@dimen/settings_button_marginStartEnd"
                android:layout_marginBottom="@dimen/settings_button_marginTopBottom"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_lbl_logout"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_textSize"/>

        </RelativeLayout>

    </ScrollView>
</layout>